# dbtools

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .ruff.toml  A_PLUS_ACHIEVEMENT_REPORT.md  CERT_MIGRATION_SUMMARY.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONTRIBUTING.md  DOCKER_E2E_HOWTO.md  FINAL_VALIDATION_REPORT.md  GDS_ARCHITECTURE_EVALUATION_2025-11-06.md  GDS_MONITOR_ALERTING_ARCHITECTURE.md  GDS_VAULT_DOCUMENTATION_PROJECT_COMPLETE.md  GDS_VAULT_DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  OOP_BUSINESS_CASE.md  OOP_IMPLEMENTATION_REPORT.md  PACKAGE_CREATION_SUMMARY.md  PERFECT_10_ACHIEVEMENT_REPORT.md  README.md  REPOSITORY_VALIDATION_SUMMARY.md  RESTRUCTURING_SUMMARY.md  RUFF_REVIEW_REPORT.md  RUFF_SETUP_REPORT.md  SNOWFLAKE_CONNECTIVITY_TESTING_GUIDE.md  VAULT_ENV_VARS_ENHANCEMENT_SUMMARY.md  VAULT_NAMESPACE_IMPLEMENTATION_SUMMARY.md  WORKSPACE_README.md  config.sh.example  dbtools-devcontainer.code-workspace  dbtools-main.code-workspace  dbtools.code-workspace  (+16 more)
.devcontainer/: README.md  (+7 more)
gds_database/: BUILD_DESTROY_LIFECYCLE.md  DATABASE_OOP_REDESIGN.md  LICENSE  MANIFEST.in  OOP_DESIGN_VALIDATION_2025-11-24.md  README.md  REPLICATION_ARCHITECTURE.md  pyproject.toml  setup.py
gds_database/docs/: DEVELOPER_GUIDE.md
gds_database/gds_database/: __init__.py  base.py  database.py  py.typed
gds_database/tests/: conftest.py  test_base.py  test_ood.py
gds_kafka/: README.md  pyproject.toml
gds_kafka/docs/: VALIDATION_2025-12-05_gemini.md
gds_kafka/gds_kafka/: exceptions.py  logging.py  producer.py
gds_kafka/tests/: conftest.py  test_producer.py
gds_mssql/: LICENSE  README.md  pyproject.toml  setup.py
gds_mssql/examples/: connection_examples.py
gds_mssql/gds_mssql/: __init__.py  connection.py
gds_mssql/tests/: conftest.py  test_connection.py
gds_notification/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
gds_notification/docs/: DEPLOYMENT.md  FUNCTIONAL_SPEC.md  RABBITMQ_OPERATION_GUIDANCE.md  RABBITMQ_VS_AMAZON_MQ.md  REQUIREMENTS.md  SNMP_INTEGRATION.md  SOLARWINDS_INTEGRATION.md
gds_notification/service/: __init__.py  main.py
gds_notification/tests/: __init__.py  conftest.py  test_providers.py
gds_notification/worker/: worker.py
gds_postgres/: README.md  pyproject.toml  setup.py
gds_postgres/examples/: connection_examples.py
gds_postgres/gds_postgres/: __init__.py  connection.py
gds_postgres/tests/: conftest.py  test_connection.py
gds_snmp_receiver/: DEVELOPER_GUIDE.md  DOCKER_E2E_HOWTO.md  Dockerfile  PACKAGE_INFO.md  QUICK_REFERENCE.md  README.md  SELF_CONTAINED_RESTRUCTURING.md  TUTORIAL.md  core.py  healthcheck.py  pyproject.toml  receiver.py  setup.py
gds_snmp_receiver/gds_snmp_receiver/: __init__.py  core.py
gds_snmp_receiver/tests/: test_core.py
gds_snmp_receiver/tools/: e2e_send_and_check.py
gds_snowflake/: ACCOUNT_MODULE_IMPLEMENTATION_SUMMARY.md  ACCOUNT_QUICK_REFERENCE.md  DATABASE_MODULE_SUMMARY.md  MANIFEST.in  METADATA_QUICK_REFERENCE.md  README.md  RESTRUCTURING_CHANGES.md  TEST_FIX_SUMMARY.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  achieve_a_plus.sh  coverage.json  pyproject.toml  pytest.ini  quick_fix.sh  run_tests.py  setup.py  test_modules.py
gds_snowflake/examples/: account_example.py  metadata_example.py  monitor_example.py
gds_snowflake/gds_snowflake/: __init__.py  base.py  connection.py  database.py  exceptions.py  monitor.py  replication.py  table.py
gds_snowflake/tests/: __init__.py  test_account.py  test_account_edges.py  test_connection_comprehensive.py  test_connection_coverage.py  test_connection_final.py  test_connection_pytest.py  test_connection_pytest_old.py.disabled  test_database.py  test_database_edges.py  test_database_more.py  test_exceptions.py  test_monitor_comprehensive.py  test_monitor_edges.py  test_monitor_integration.py  test_monitor_integration_old.py.disabled  test_monitor_more.py  test_oop_improvements.py  test_replication_edges.py  test_snowflake_connection_old.py.disabled  test_snowflake_replication.py  test_table.py  test_table_edges.py
gds_vault/: BEGINNERS_GUIDE.md  CHANGELOG_ROTATION_AWARE.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS.md  ENHANCEMENTS_SUMMARY.md  LOGGING_AND_RETRY_GUIDE.md  LOGGING_AND_RETRY_IMPLEMENTATION.md  MANIFEST.in  MIGRATION_GUIDE.md  MOUNT_POINT_IMPLEMENTATION_SUMMARY.md  MOUNT_POINT_QUICK_REF.md  OOP_DESIGN_ANALYSIS.md  OOP_IMPLEMENTATION_COMPLETE.md  PRODUCTION_ENHANCEMENTS_COMPLETE.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_ASSESSMENT_V2.md  README.md  ROTATION_AWARE_IMPLEMENTATION_DOCS.md  ROTATION_AWARE_TTL_GUIDE.md  ROTATION_TEST_VALIDATION_SUMMARY.md  SSL_CONFIGURATION.md  TEST_DOCUMENTATION.md  VAULT_SSL_FIX_GUIDE.md  pyproject.toml  pytest.ini  rotation_demo.py  run_tests.py  setup.py  validation_report_2025-12-03_Gemini_3_Pro.md
gds_vault/docs/: DOCUMENTATION_INDEX.md  LOGGING_AND_RETRY_GUIDE.md  LOGGING_AND_RETRY_IMPLEMENTATION.md  MOUNT_POINT_IMPLEMENTATION_SUMMARY.md  PRODUCTION_ENHANCEMENTS_COMPLETE.md  PRODUCTION_READINESS_ASSESSMENT.md  VAULT_APPROLE_MOUNT_POINT_CLEANUP.md  VAULT_ENV_VARS_ENHANCEMENT_SUMMARY.md  VAULT_NAMESPACE_GUIDE.md  VAULT_NAMESPACE_IMPLEMENTATION_SUMMARY.md
gds_vault/examples/: enhanced_client.py  logging_retry_example.py  mount_point_example.py  rotation_aware_example.py  ssl_example.py  vault_client_example.py
gds_vault/gds_vault/: __init__.py  async_client.py  auth.py  base.py  cache.py  client.py  enhanced_vault.py  retry.py  rotation.py  tests.py  transport.py  vault.py
gds_vault/tests/: __init__.py  conftest.py  test_async.py  test_auth.py  test_cache.py  test_client.py  test_exceptions.py  test_metrics.py  test_mount_point.py  test_retry.py  test_rotation_aware.py  test_vault.py  test_vault_client.py  test_vault_client_legacy.py
python/gds_ad/: README.md  pyproject.toml
python/gds_benchmark/: pyproject.toml
python/gds_certs/: pyproject.toml
python/gds_dbtool/: README.md  pyproject.toml
(+2317 files in other folders)
