# Ruff Configuration for DBTools Project
# ========================================
# This configuration applies to the entire workspace

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtools"
version = "0.1.0"
description = "Database tools and automation"
authors = [{ name = "GDS Team" }]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Tooling installed by the VS Code dev container into the repo-local .venv.
devcontainer = [
    "aiohttp",
    "ansible",
    "build",
    "grafana-api",
    "hvac",
    "ipykernel",
    "kafka-python",
    "pika",
    "pre-commit",
    "prometheus-client",
    "psycopg2-binary",
    "pulumi",
    "pysnmp",
    "pyodbc",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "snowflake-connector-python",
    "wheel",
]

# Optional Jupyter/Notebook-heavy packages (installed only when ENABLE_JUPYTERLAB=1).
devcontainer-jupyter = ["jupyterlab", "numpy", "pandas"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gds_*"]

[tool.ruff]

# Set line length to match your codebase
line-length = 120

# Target Python 3.9+ (adjust based on your minimum supported version)
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PL",  # pylint rules
    "RUF", # Ruff-specific rules
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (sometimes necessary)
    "PLR2004", # Magic value used in comparison (sometimes OK)
    "RET504",  # Unnecessary variable assignment before return
    "SIM108",  # Use ternary operator (not always clearer)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = [
    "F401", # Unused imports (OK in __init__.py for re-exports)
    "F403", # Star imports (sometimes used in __init__.py)
]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "S101",    # Use of assert (OK in tests)
    "PLR2004", # Magic values (OK in tests)
]
"gds_snowflake/test_modules.py" = [
    "F401", # Unused imports (testing import functionality)
]
"docs/tutorials/exercises/*_exercises.py" = [
    "F821",   # Undefined name (exercises have TODO sections)
    "ARG001", # Unused arguments (exercises may be incomplete)
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["gds_snowflake", "gds_vault"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
# Maximum complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings (matches your codebase)
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"

# Format docstrings
docstring-code-format = true

# Format code in docstrings
docstring-code-line-length = 80

[tool.pytest.ini_options]
addopts = "--import-mode=prepend"
pythonpath = [
    ".",
    "gds_benchmark/src",
    "gds_database/src",
    "gds_hammerdb/src",
    "gds_kafka/src",
    "gds_liquibase/src",
    "gds_metrics/src",
    "gds_mongodb/src",
    "gds_mssql/src",
    "gds_notification/src",
    "gds_postgres/src",
    "gds_snmp_receiver/src",
    "gds_snowflake/src",
    "gds_vault/src",
]

testpaths = ["tests", "gds_*/tests"]
python_files = "test_*.py"
