# Ruff Configuration for DBTools Project
# ========================================
# This configuration applies to the entire workspace

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtools"
version = "0.1.0"
description = "Database tools and automation"
authors = [{ name = "GDS Team" }]
requires-python = ">=3.9"
dependencies = []

# =============================================================================
# UV Configuration
# =============================================================================
# UV is the primary package manager for this repository.
# See: https://docs.astral.sh/uv/

[tool.uv]
# Treat root as an installable package
package = true

# Prefer UV-managed Python over system Python
python-preference = "managed"

# Workspace configuration: all gds_* packages are members
[tool.uv.workspace]
members = ["python/gds_*"]

# =============================================================================
# Dependency Groups (UV-native format)
# =============================================================================
# Use `uv sync --group <name>` to install specific groups.
# See: https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups

[dependency-groups]
# Core development tools
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

# Full devcontainer tooling (includes dev group)
devcontainer = [
    "aiohttp",
    "ansible",
    "build",
    "grafana-api",
    "hvac",
    "ipykernel",
    "kafka-python",
    "pika",
    "prometheus-client",
    "psycopg2-binary",
    "pulumi",
    "pysnmp",
    "pyodbc",
    "snowflake-connector-python",
    "wheel",
    { include-group = "dev" },
]

# Optional Jupyter stack (install with: uv sync --group jupyter)
jupyter = [
    "jupyterlab",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["gds_*"]

[tool.ruff]

# Set line length to match your codebase
line-length = 120

# Target Python 3.9+ (adjust based on your minimum supported version)
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PL",  # pylint rules
    "RUF", # Ruff-specific rules
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (sometimes necessary)
    "PLR2004", # Magic value used in comparison (sometimes OK)
    "PLR0912", # Too many branches (sometimes necessary for complex logic)
    "PLR0915", # Too many statements (sometimes necessary)
    "RET504",  # Unnecessary variable assignment before return
    "SIM108",  # Use ternary operator (not always clearer)
    "SIM102",  # Nested if statements (sometimes clearer)
    "SIM105",  # Use contextlib.suppress (not always clearer)
    "SIM117",  # Multiple with statements (sometimes clearer)
    "PLC0415", # Import not at top level (often intentional for lazy loading)
    "PTH100",  # os.path.abspath -> Path.resolve (existing code style)
    "PTH107",  # os.remove -> Path.unlink (existing code style)
    "PTH109",  # os.getcwd -> Path.cwd (existing code style)
    "PTH110",  # os.path.exists -> Path.exists (existing code style)
    "PTH112",  # os.path.isdir -> Path.is_dir (existing code style)
    "PTH113",  # os.path.isfile -> Path.is_file (existing code style)
    "PTH118",  # os.path.join -> Path / operator (existing code style)
    "PTH120",  # os.path.dirname -> Path.parent (existing code style)
    "PTH123",  # open() -> Path.open() (existing code style)
    "N817",    # CamelCase imported as acronym (ET for ElementTree is conventional)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files
"__init__.py" = [
    "F401", # Unused imports (OK in __init__.py for re-exports)
    "F403", # Star imports (sometimes used in __init__.py)
]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "ARG002",  # Unused method argument (fixtures)
    "ARG005",  # Unused lambda argument (mocks)
    "S101",    # Use of assert (OK in tests)
    "PLR2004", # Magic values (OK in tests)
    "B017",    # assert blind exception (OK in tests)
]
"**/tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "ARG002",  # Unused method argument (fixtures)
    "ARG005",  # Unused lambda argument (mocks)
    "S101",    # Use of assert (OK in tests)
    "PLR2004", # Magic values (OK in tests)
    "B017",    # assert blind exception (OK in tests)
]
"python/gds_snowflake/test_modules.py" = [
    "F401", # Unused imports (testing import functionality)
]
"python/gds_snmp_receiver/**/*.py" = [
    "N802",  # Function name should be lowercase (external SNMP API)
    "N803",  # Argument name should be lowercase (external SNMP API)
]
"**/examples/**/*.py" = [
    "B007",  # Loop control variable not used (demo code)
    "ARG001",
    "ARG002",
]
"docs/tutorials/exercises/*.py" = [
    "F821",   # Undefined name (exercises have TODO sections)
    "F841",   # Unused variables (exercises may be incomplete)
    "ARG001", # Unused arguments (exercises may be incomplete)
    "ARG002", # Unused arguments (exercises may be incomplete)
    "ARG005", # Unused lambda args
    "E712",   # Comparison to True/False (exercises demonstrating concepts)
    "C401",   # Unnecessary generator (exercises)
    "B024",   # Abstract class without abstract methods (exercises)
    "PLW1641", # Missing __hash__ (exercises)
    "RUF001", "RUF003",  # Unicode in comments/strings
]
"docs/tutorials/**/*.py" = [
    "ARG005",  # Unused lambda arguments (demo code)
    "RUF003",  # Unicode in comments
]
"docs/courses/**/*.py" = [
    "UP006", "UP035",  # Type hint style (tutorial code)
    "SIM110", "B007",  # Simplification (tutorial code)
]
"scripts/*.py" = [
    "UP006", "UP035",  # Type hint style
    "N802", "N817",    # Naming conventions (AST visitors, ET alias)
    "ARG001",          # Unused arguments
    "RUF001", "RUF013", # String/optional style
]
"snowflake_monitoring/*.py" = [
    "PTH119", "PTH122", # Pathlib style
    "RUF013",          # Optional style
    "ARG001",          # Unused arguments
    "PLW0602",         # Global usage
    "C408",            # Dict literal
]
"validate_links.py" = ["B007"]
"*.ipynb" = ["E402", "F401"]  # Notebook cell imports
"scripts/diagnose_vault_approle.py" = ["RUF001"]  # Intentional unicode
"docs/courses/liquibase/**/*.py" = ["RUF003"]  # Intentional unicode in comments
# Abstract base classes and interface implementations
"python/gds_vault/src/gds_vault/cache.py" = ["ARG002"]
"python/gds_vault/src/gds_vault/client.py" = ["ARG002"]
"python/gds_vault/src/gds_vault/base.py" = ["ARG002"]
"python/gds_vault/src/gds_vault/auth.py" = ["ARG002"]
"python/gds_vault/src/gds_vault/async_client.py" = ["ARG002"]
"python/gds_hammerdb/src/gds_hammerdb/parser.py" = ["ARG002"]
"python/gds_hammerdb/src/gds_hammerdb/runners/base.py" = ["ARG002"]
"python/gds_mongodb/src/gds_mongodb/replica_set.py" = ["ARG002"]
"python/gds_mongodb/src/gds_mongodb/configuration.py" = ["B904"]  # Re-raises with context
"python/gds_liquibase/src/gds_liquibase/runner.py" = ["ARG002"]
"python/gds_liquibase/src/gds_liquibase/changelog.py" = ["N817"]  # ElementTree as ET is conventional
"python/gds_snowflake/src/gds_snowflake/base.py" = ["ARG002"]
"python/gds_snowflake/src/gds_snowflake/replication.py" = ["PLW2901"]  # Loop var reassignment
"python/gds_snmp_receiver/src/gds_snmp_receiver/core.py" = ["ARG002", "RUF012"]
"python/gds_snmp_receiver/src/gds_snmp_receiver/receiver.py" = ["PLW1508"]
"python/gds_snmp_receiver/healthcheck.py" = ["PTH"]  # os.path usage
"python/gds_snmp_receiver/tests/test_core.py" = ["RUF"]  # Regex pattern and unicode
"python/gds_mssql/src/gds_mssql/connection.py" = ["RUF012"]
"python/gds_mongodb/src/gds_mongodb/connection.py" = ["ARG002"]  # Interface method
"python/gds_mongodb/src/gds_mongodb/connection_config.py" = ["RUF012"]  # Class constant

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["gds_certs", "gds_snowflake", "gds_vault"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
# Maximum complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings (matches your codebase)
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "lf"

# Format docstrings
docstring-code-format = true

# Format code in docstrings
docstring-code-line-length = 80

[tool.pytest.ini_options]
addopts = "--import-mode=prepend"
pythonpath = [
    ".",
    "python/gds_benchmark/src",
    "python/gds_certs/src",
    "python/gds_database/src",
    "python/gds_hammerdb/src",
    "python/gds_kafka/src",
    "python/gds_liquibase/src",
    "python/gds_metrics/src",
    "python/gds_mongodb/src",
    "python/gds_mssql/src",
    "python/gds_notification/src",
    "python/gds_postgres/src",
    "python/gds_snmp_receiver/src",
    "python/gds_snowflake/src",
    "python/gds_vault/src",
]

testpaths = ["tests", "python/gds_*/tests"]
python_files = "test_*.py"
