[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-postgres"
version = "1.0.0"
description = "PostgreSQL database connection library built on gds-database"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GDS Team", email = "gds-team@example.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["postgresql", "postgres", "database", "connection", "gds"]
requires-python = ">=3.8"
dependencies = [
    "gds-database>=1.0.0",
    "psycopg2-binary>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
async = [
    "asyncpg>=0.27.0",
]
pool = [
    "psycopg2-pool>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/davidvupham/snowflake"
Repository = "https://github.com/davidvupham/snowflake"
Documentation = "https://github.com/davidvupham/snowflake/tree/main/gds_postgres"
Issues = "https://github.com/davidvupham/snowflake/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gds_postgres*"]

[tool.setuptools.package-data]
gds_postgres = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=gds_postgres",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]