[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-snmp-receiver"
version = "0.1.0"
description = "Production-ready SNMP trap receiver with RabbitMQ integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GDS Team", email = "gds@example.com"}
]
keywords = ["snmp", "trap", "receiver", "rabbitmq", "monitoring", "alerting", "gds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pysnmp>=4.4.12",
    "pika>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gds-snmp-receiver = "gds_snmp_receiver.receiver:main"

[project.urls]
Homepage = "https://github.com/davidvupham/dbtools"
Documentation = "https://github.com/davidvupham/dbtools/tree/main/gds_snmp_receiver"
Repository = "https://github.com/davidvupham/dbtools"
Issues = "https://github.com/davidvupham/dbtools/issues"

[tool.setuptools]
packages = ["gds_snmp_receiver"]

[tool.setuptools.package-data]
gds_snmp_receiver = ["*.md", "*.txt"]
