[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-vault"
version = "0.1.0"
description = "HashiCorp Vault helper for secret retrieval via AppRole auth."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "GDS Team", email = "gds@example.com"}
]
keywords = ["vault", "hashicorp", "secrets", "approle", "gds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0"
]

[tool.setuptools]
packages = ["gds_vault"]
