[project]
name = "gds-dbtool"
version = "0.1.0"
description = "Database reliability engineering CLI tool"
readme = "README.md"
authors = [{ name = "GDS Team" }]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "hvac>=2.0.0",
    "requests>=2.0.0",
]

[project.scripts]
dbtool = "gds_dbtool.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
