[project]
name = "gds-dbtool"
version = "0.1.0"
description = "Unified Database CLI tool"
readme = "README.md"
authors = [{ name = "GDS Team" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "hvac>=2.0.0",
    "requests>=2.0.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0.3",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dbtool = "gds_dbtool.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gds_dbtool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
