[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-liquibase"
version = "0.1.0"
description = "Liquibase wrapper for database change management CI/CD with GitHub Actions"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "GDS Team", email = "gds@example.com" }]
keywords = [
    "liquibase",
    "database",
    "migration",
    "cicd",
    "github-actions",
    "schema",
    "gds",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gds-database>=0.1.0",
    "gds-postgres>=0.1.0",
    "gds-mssql>=0.1.0",
    "gds-mongodb>=0.1.0",
]

[tool.uv.sources]
gds-database = { workspace = true }
gds-postgres = { workspace = true }
gds-mssql = { workspace = true }
gds-mongodb = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/davidvupham/dbtools"
Repository = "https://github.com/davidvupham/dbtools"
Documentation = "https://github.com/davidvupham/dbtools/tree/main/gds_liquibase"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gds_liquibase*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=gds_liquibase --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501", "N817"]  # N817: ET for ElementTree is conventional

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
