[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-mongodb"
version = "1.0.0"
description = "MongoDB database connection library built on gds-database"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GDS Team", email = "gds-team@example.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mongodb", "mongo", "database", "connection", "gds", "nosql"]
requires-python = ">=3.9"
dependencies = [
    "gds-database>=1.0.0",
    "pymongo>=4.0.0",
]

[tool.uv.sources]
gds-database = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gds_mongodb*"]

[tool.setuptools.package-data]
gds_mongodb = ["py.typed"]
